--- a/App10.Weather/Views/MainWindow.xaml
+++ b/App10.Weather/Views/MainWindow.xaml
@@ -6,69 +6,96 @@
         xmlns:ui="http://schemas.modernwpf.com/2019"
         xmlns:vm="clr-namespace:App10.Weather.ViewModels"
         xmlns:wpf="clr-namespace:InteractiveDataDisplay.WPF;assembly=InteractiveDataDisplay.WPF"
+        xmlns:control="clr-namespace:App10.Weather.Control"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance vm:MainViewModel, IsDesignTimeCreatable=True}"
         ui:WindowHelper.UseModernWindowStyle="True"
         Title="App10.Weather" d:DesignHeight="600" d:DesignWidth="800" Width="800">
     <Grid>
-        <Grid.Resources>
-            <vm:HourlyModelToPointsConverter x:Key="HourlyModelToPointsConverter"/>
-        </Grid.Resources>
-        
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
+        <wpf:Figure Opacity="0.5">
+            <wpf:PlotAxis AxisOrientation="Right" wpf:Figure.Placement="Right" Visibility="Collapsed" />
+            <wpf:PlotAxis AxisOrientation="Top" wpf:Figure.Placement="Top" Visibility="Collapsed" />
+            <wpf:LineGraph x:Name="linegraph" />
+            <!-- wpf:MouseNavigation/ -->
+            <Border BorderThickness="0.5" BorderBrush="Black" />
+        </wpf:Figure>
+
+        <UniformGrid Columns="2">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <wpf:Figure Margin="20" Grid.Row="0">
+                    <wpf:PlotAxis AxisOrientation="Right" wpf:Figure.Placement="Right" Visibility="Collapsed" />
+                    <wpf:PlotAxis AxisOrientation="Top" wpf:Figure.Placement="Top" Visibility="Collapsed" />
+                    <Grid Name="lines" />
+                    <!-- wpf:MouseNavigation/ -->
+                    <Border BorderThickness="0.5" BorderBrush="Black" />
+                </wpf:Figure>
+
+                <Grid Margin="0,30,0,30" Grid.Row="0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="3*" />
+                        <RowDefinition Height="1*" />
+                    </Grid.RowDefinitions>
+
+                    <Grid Grid.Row="0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*" />
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="2*" />
+                            <ColumnDefinition Width="4*" />
+                        </Grid.ColumnDefinitions>
+                        <Image Source="../Resources/Dark/0@1x.png" VerticalAlignment="Bottom" Margin="20,0,10,0"
+                               Grid.Column="0" />
+                        <TextBlock Text="19" FontWeight="Heavy" FontSize="28" VerticalAlignment="Bottom"
+                                   Margin="0,0,0,0" Grid.Column="1" />
+                        <TextBlock Text="℃" FontWeight="Heavy" FontSize="22" VerticalAlignment="Bottom"
+                                   Margin="0,0,0,8" Grid.Column="2" />
+                        <TextBlock Text="雾" FontWeight="Heavy" FontSize="28" VerticalAlignment="Bottom" Grid.Column="3" />
+                    </Grid>
+                    
+                    <Grid Margin="0,30,0,20" Grid.Row="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <control:DailyView Grid.Column="0" />
+                        <control:DailyView Grid.Column="1" />
+                        <control:DailyView Grid.Column="2" />
+                        <control:DailyView Grid.Column="3" />
+                        <control:DailyView Grid.Column="4" />
+                    </Grid>
+                    
+                    <Grid Grid.Row="2">
+                        <TextBlock FontWeight="Heavy" FontSize="20" VerticalAlignment="Bottom" Margin="20,0,10,0"
+                                   Text="江苏省苏州市" />
+                    </Grid>
+                </Grid>
+
+                <WrapPanel HorizontalAlignment="Right" Grid.Row="1">
+                    <Button Command="{Binding CommandRenewDaily}" Margin="5" Content="逐日天气" />
+                    <Button Command="{Binding CommandRenewHourly}" Margin="5" Content="逐时天气" />
+                    <Button Command="{Binding CommandRenewNow}" Margin="5" Content="实时天气" />
+                </WrapPanel>
+            </Grid>
+
+            <StackPanel>
+                <TextBlock Text="{Binding NowModel.Now.Text}" />
+                <TextBlock Text="{Binding NowModel.Location.Path}" />
+                <TextBlock Text="{Binding NowModel.Now.Temperature}" />
+                <TextBlock Text="{Binding NowModel.Last_Update}" />
+            </StackPanel>
             
-            <wpf:Chart BottomTitle="Argument" LeftTitle="Function" Margin="20,20,10,20" Grid.Row="0">
-                <wpf:LineGraph x:Name="linegraph0" 
-                               Description="演示" 
-                               Stroke="Blue" StrokeThickness="3"
-                               Points="{Binding HourlyModel, Converter={StaticResource HourlyModelToPointsConverter}}"/>
-            </wpf:Chart>
-        
-            <wpf:Figure Margin="20,20,10,20" Grid.Row="1">
-                <wpf:PlotAxis AxisOrientation="Right" wpf:Figure.Placement="Right"/>
-                <wpf:PlotAxis AxisOrientation="Top" wpf:Figure.Placement="Top"/>
-                <wpf:LineGraph x:Name="linegraph1" Stroke="Blue" StrokeThickness="3"/>
-                <wpf:MouseNavigation/>
-                <Border BorderThickness="0.5" BorderBrush="Black"/>
-            </wpf:Figure>
-            
-            <wpf:Chart Name="Plotter" Grid.Row="2">
-                <wpf:Chart.Title>
-                    <TextBlock HorizontalAlignment="Center" FontSize="18" Margin="0,5,0,5">逐日天气</TextBlock>
-                </wpf:Chart.Title>
-                <wpf:Chart.LegendContent>
-                    <wpf:LegendItemsPanel>
-                        <wpf:LegendItemsPanel.Resources>
-                            <DataTemplate x:Key="InteractiveDataDisplay.WPF.LineGraph">
-                                <StackPanel Orientation="Horizontal">
-                                    <Line Width="15" Height="15" X1="0" Y1="0" X2="15" Y2="15" Stroke="{Binding Path=Stroke}" StrokeThickness="2"/>
-                                    <TextBlock Margin="5,0,0,0" Text="{Binding Path=Description}"/>
-                                </StackPanel>
-                            </DataTemplate>
-                        </wpf:LegendItemsPanel.Resources>
-                    </wpf:LegendItemsPanel>
-                </wpf:Chart.LegendContent>
-                <Grid Name="lines"/>
-            </wpf:Chart>
-            
-            <WrapPanel HorizontalAlignment="Right" Grid.Row="3">
-                <Button Command="{Binding CommandRenewDaily}" Content="逐日天气" />
-                <Button Command="{Binding CommandRenewHourly}" Content="逐时天气" />
-                <Button Command="{Binding CommandRenewNow}" Content="实时天气" />
-            </WrapPanel>
-        </Grid>
-        
-        <StackPanel>
-            <TextBlock Text="{Binding NowModel.Now.Text}" />
-            <TextBlock Text="{Binding NowModel.Location.Path}" />
-            <TextBlock Text="{Binding NowModel.Now.Temperature}" />
-            <TextBlock Text="{Binding NowModel.Last_Update}" />
-        </StackPanel>
+            <Viewbox />
+            <Viewbox />
+        </UniformGrid>
     </Grid>
 </Window>
