--- a/App10.Weather/Views/MainWindow.xaml
+++ b/App10.Weather/Views/MainWindow.xaml
@@ -27,13 +27,7 @@
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
-                <wpf:Figure Margin="20" Grid.Row="0">
-                    <wpf:PlotAxis AxisOrientation="Right" wpf:Figure.Placement="Right" Visibility="Collapsed" />
-                    <wpf:PlotAxis AxisOrientation="Top" wpf:Figure.Placement="Top" Visibility="Collapsed" />
-                    <Grid Name="lines" />
-                    <!-- wpf:MouseNavigation/ -->
-                    <Border BorderThickness="0.5" BorderBrush="Black" />
-                </wpf:Figure>
+                
 
                 <Grid Margin="0,30,0,30" Grid.Row="0">
                     <Grid.RowDefinitions>
@@ -59,19 +53,27 @@
                         <TextBlock Text="雾" FontWeight="Heavy" FontSize="28" VerticalAlignment="Bottom" Grid.Column="3" />
                     </Grid>
                     
-                    <Grid Margin="0,30,0,20" Grid.Row="1">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        <control:DailyView Grid.Column="0" />
-                        <control:DailyView Grid.Column="1" />
-                        <control:DailyView Grid.Column="2" />
-                        <control:DailyView Grid.Column="3" />
-                        <control:DailyView Grid.Column="4" />
+                    <Grid Grid.Row="1">
+                        <wpf:Figure Margin="30,40,30,40">
+                            <wpf:PlotAxis AxisOrientation="Right" wpf:Figure.Placement="Right" Visibility="Collapsed" />
+                            <wpf:PlotAxis AxisOrientation="Top" wpf:Figure.Placement="Top" Visibility="Collapsed" />
+                            <Grid Name="lines" />
+                            <!-- wpf:MouseNavigation/ -->
+                        </wpf:Figure>
+                        <Grid Margin="0,30,0,20" >
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <control:DailyView Grid.Column="0" />
+                            <control:DailyView Grid.Column="1" />
+                            <control:DailyView Grid.Column="2" />
+                            <control:DailyView Grid.Column="3" />
+                            <control:DailyView Grid.Column="4" />
+                        </Grid>
                     </Grid>
                     
                     <Grid Grid.Row="2">
