--- a/App10.Weather/Views/MainWindow.xaml
+++ b/App10.Weather/Views/MainWindow.xaml
@@ -7,10 +7,14 @@
         xmlns:vm="clr-namespace:App10.Weather.ViewModels"
         xmlns:wpf="clr-namespace:InteractiveDataDisplay.WPF;assembly=InteractiveDataDisplay.WPF"
         xmlns:control="clr-namespace:App10.Weather.Control"
+        xmlns:converter="clr-namespace:App10.Weather.Converter"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance vm:MainViewModel, IsDesignTimeCreatable=True}"
         ui:WindowHelper.UseModernWindowStyle="True"
         Title="App10.Weather" d:DesignHeight="600" d:DesignWidth="800" Width="800">
+    <Window.Resources>
+        <converter:IndexToImageSourceConverter x:Key="IndexToImageSourceConverter" />
+    </Window.Resources>
     <Grid>
         <wpf:Figure Opacity="0.5">
             <wpf:PlotAxis AxisOrientation="Right" wpf:Figure.Placement="Right" Visibility="Collapsed" />
@@ -26,9 +30,7 @@
                     <RowDefinition Height="*" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-
                 
-
                 <Grid Margin="0,30,0,30" Grid.Row="0">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="1*" />
@@ -44,13 +46,19 @@
                             <ColumnDefinition Width="2*" />
                             <ColumnDefinition Width="4*" />
                         </Grid.ColumnDefinitions>
-                        <Image Source="../Resources/Dark/0@1x.png" VerticalAlignment="Bottom" Margin="20,0,10,0"
+                        <Image Source="{Binding NowModel.Now.Code, Converter={StaticResource IndexToImageSourceConverter}}"
+                               VerticalAlignment="Bottom" Margin="20,0,10,0"
                                Grid.Column="0" />
-                        <TextBlock Text="19" FontWeight="Heavy" FontSize="28" VerticalAlignment="Bottom"
-                                   Margin="0,0,0,0" Grid.Column="1" />
+                        <TextBlock Text="{Binding NowModel.Now.Temperature}" 
+                                   FontWeight="Heavy" FontSize="28" VerticalAlignment="Bottom"
+                                   Margin="0,0,0,0" 
+                                   Grid.Column="1" />
                         <TextBlock Text="℃" FontWeight="Heavy" FontSize="22" VerticalAlignment="Bottom"
-                                   Margin="0,0,0,8" Grid.Column="2" />
-                        <TextBlock Text="雾" FontWeight="Heavy" FontSize="28" VerticalAlignment="Bottom" Grid.Column="3" />
+                                   Margin="0,0,0,8" 
+                                   Grid.Column="2" />
+                        <TextBlock Text="{Binding NowModel.Now.Text}"
+                                   FontWeight="Heavy" FontSize="28" VerticalAlignment="Bottom" 
+                                   Grid.Column="3" />
                     </Grid>
                     
                     <Grid Grid.Row="1">
@@ -68,17 +76,42 @@
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
-                            <control:DailyView Grid.Column="0" />
-                            <control:DailyView Grid.Column="1" />
-                            <control:DailyView Grid.Column="2" />
-                            <control:DailyView Grid.Column="3" />
-                            <control:DailyView Grid.Column="4" />
+                            <control:DailyView
+                                SourceIndex="{Binding DailyModel.Daily[0].Code_Day}"
+                                ShortDate="{Binding DailyModel.Daily[0].Date}"
+                                High="{Binding DailyModel.Daily[0].High}"
+                                Low="{Binding DailyModel.Daily[0].Low}"
+                                Grid.Column="0" />
+                            <control:DailyView
+                                SourceIndex="{Binding DailyModel.Daily[1].Code_Day}"
+                                ShortDate="{Binding DailyModel.Daily[1].Date}"
+                                High="{Binding DailyModel.Daily[1].High}"
+                                Low="{Binding DailyModel.Daily[1].Low}"
+                                Grid.Column="1" />
+                            <control:DailyView
+                                SourceIndex="{Binding DailyModel.Daily[2].Code_Day}"
+                                ShortDate="{Binding DailyModel.Daily[2].Date}"
+                                High="{Binding DailyModel.Daily[2].High}"
+                                Low="{Binding DailyModel.Daily[2].Low}"
+                                Grid.Column="2" />
+                            <control:DailyView
+                                SourceIndex="{Binding DailyModel.Daily[3].Code_Day}"
+                                ShortDate="{Binding DailyModel.Daily[3].Date}"
+                                High="{Binding DailyModel.Daily[3].High}"
+                                Low="{Binding DailyModel.Daily[3].Low}"
+                                Grid.Column="3" />
+                            <control:DailyView
+                                SourceIndex="{Binding DailyModel.Daily[4].Code_Day}"
+                                ShortDate="{Binding DailyModel.Daily[4].Date}"
+                                High="{Binding DailyModel.Daily[4].High}"
+                                Low="{Binding DailyModel.Daily[4].Low}"
+                                Grid.Column="4" />
                         </Grid>
                     </Grid>
                     
                     <Grid Grid.Row="2">
                         <TextBlock FontWeight="Heavy" FontSize="20" VerticalAlignment="Bottom" Margin="20,0,10,0"
-                                   Text="江苏省苏州市" />
+                                   Text="{Binding DailyModel.Location.Name}" />
                     </Grid>
                 </Grid>
 
