--- a/App10.Weather/Views/MainWindow.xaml
+++ b/App10.Weather/Views/MainWindow.xaml
@@ -101,8 +101,10 @@
                 </Grid>
 
                 <Grid Grid.Row="2">
-                    <TextBlock FontWeight="Heavy" FontSize="20" VerticalAlignment="Bottom" Margin="20,0,10,0"
-                               Text="{Binding DailyModel.Location.Name}" />
+                    <WrapPanel>
+                        <TextBlock FontWeight="Heavy" FontSize="20" VerticalAlignment="Bottom" Margin="20,0,10,0"
+                                   Text="{Binding DailyModel.Location.Name}" />
+                    </WrapPanel>
                 </Grid>
             </Grid>
 
