--- a/App12.SQLite/App.xaml
+++ b/App12.SQLite/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="App11.Databases.App"
+﻿<Application x:Class="App12.SQLite.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:ui="http://schemas.modernwpf.com/2019"
-             StartupUri="Views/SlashWindow.xaml">
+             StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
