--- a/App12.SQLite/Views/MainWindow.xaml
+++ b/App12.SQLite/Views/MainWindow.xaml
@@ -1,15 +1,15 @@
-﻿<Window x:Class="App11.Databases.Views.HotelWindow"
+﻿<Window x:Class="App12.SQLite.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ui="http://schemas.modernwpf.com/2019"
-        xmlns:vm="clr-namespace:App11.Databases.ViewModels"
+        xmlns:mi="clr-namespace:App12.SQLite.Miscellaneous"
+        xmlns:vm="clr-namespace:App12.SQLite.ViewModels"
         xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-        xmlns:mi="clr-namespace:App11.Databases.Miscellaneous"
-        mc:Ignorable="d"
         ui:WindowHelper.UseModernWindowStyle="True"
-        Title="Hotel System" Height="800" Width="1200">
+        mc:Ignorable="d"
+        Title="App12: Hotel System with SQLite" Height="800" Width="1200" Loaded="Window_Loaded">
     <Window.Resources>
         <mi:RoomTypeConverter x:Key="RoomTypeConverter"/>
         <mi:ResetFilterClientParametersConverter x:Key="ResetFilterClientConverter"/>
@@ -30,7 +30,9 @@
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
 
-                <DataGrid Grid.Column="0" x:Name="ClientsGrid" ItemsSource="{Binding Context.Clients.Local}" SelectedItem="{Binding SelectedClient, Mode=TwoWay}">
+                <DataGrid Grid.Column="0" x:Name="ClientsGrid" 
+                          ItemsSource="{Binding ClientsCollection}" 
+                          SelectedItem="{Binding SelectedClient, Mode=TwoWay}">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="First name" Binding="{Binding FirstName}"/>
                         <DataGridTextColumn Header="Last name" Binding="{Binding LastName}"/>
@@ -72,7 +74,7 @@
                         <TextBox Grid.Row="1" Grid.Column="1" Margin="3" Text="{Binding ClientInfo.LastName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                         <DatePicker Grid.Row="2" Grid.Column="1" Margin="3" SelectedDate="{Binding ClientInfo.Birthdate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                         <TextBox Grid.Row="3" Grid.Column="1" Margin="3" Text="{Binding ClientInfo.Account, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                        <ComboBox Grid.Row="4" Grid.Column="1" Margin="3" ItemsSource="{Binding Context.Rooms.Local}" SelectedItem="{Binding ClientInfo.Room, Mode=TwoWay}">
+                        <ComboBox Grid.Row="4" Grid.Column="1" Margin="3" ItemsSource="{Binding RoomsCollection}" SelectedItem="{Binding ClientInfo.Room, Mode=TwoWay}">
                             <ComboBox.ItemTemplate>
                                 <DataTemplate>
                                     <TextBlock>
@@ -145,7 +147,7 @@
                                         </b:EventTrigger>
                                     </b:Interaction.Triggers>
                                 </TextBox>
-                                <ComboBox x:Name="RnCbFilter" Grid.Row="4" Grid.Column="1" Margin="3" ItemsSource="{Binding Context.Rooms.Local}" SelectedItem="{Binding ClientFilter.Room}">
+                                <ComboBox x:Name="RnCbFilter" Grid.Row="4" Grid.Column="1" Margin="3" ItemsSource="{Binding RoomsCollection}" SelectedItem="{Binding ClientFilter.Room}">
                                     <ComboBox.ItemTemplate>
                                         <DataTemplate>
                                             <TextBlock>
@@ -203,7 +205,9 @@
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
 
-                <DataGrid Grid.Column="0" x:Name="RoomsGrid" ItemsSource="{Binding Context.Rooms.Local}" SelectedItem="{Binding SelectedRoom, Mode=TwoWay}">
+                <DataGrid Grid.Column="0" x:Name="RoomsGrid" 
+                          ItemsSource="{Binding RoomsCollection}" 
+                          SelectedItem="{Binding SelectedRoom, Mode=TwoWay}">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Room number" Binding="{Binding Number}"/>
                         <DataGridTextColumn Header="Room type" Binding="{Binding Type}"/>
