--- a/App11.HIK/Views/HikWindow.xaml
+++ b/App11.HIK/Views/HikWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:forms="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
+        xmlns:interop="clr-namespace:Microsoft.DwayneNeed.Interop;assembly=Microsoft.DwayneNeed"
         mc:Ignorable="d"
         Title="HikWindow" Height="450" Width="800">
     <Grid>
@@ -13,10 +14,13 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid Grid.Row="0">
-                <WindowsFormsHost HorizontalAlignment="Stretch">
-                    <forms:PictureBox x:Name="VideoControl" BackColor="Black" AutoSize="True"/>
-                </WindowsFormsHost>
-                <Grid x:Name="PanelBack" Background="#DFFF">
+                <interop:AirspaceDecorator AirspaceMode="Redirect" IsInputRedirectionEnabled="True"
+                                           IsOutputRedirectionEnabled="True">
+                    <WindowsFormsHost HorizontalAlignment="Stretch">
+                        <forms:PictureBox x:Name="VideoControl" BackColor="Black" AutoSize="True" />
+                    </WindowsFormsHost>
+                </interop:AirspaceDecorator>
+                <Grid x:Name="PanelBack" Background="#EFFF">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*" />
@@ -30,11 +34,11 @@
                     <Image Grid.Column="1" Grid.Row="1" Source="../Resources/ForbiddenSign.png" />
                 </Grid>
             </Grid>
-        
+
             <WrapPanel VerticalAlignment="Bottom" Grid.Row="1">
-                <Button x:Name="BtnPreview" Content="预览" Click="BtnPreview_OnClick"/>
-                <Button x:Name="BtnShotJpeg" Content="抓图" Click="ButtonShotJpeg_OnClick" Margin="5,0,0,0"/>
-                <Button x:Name="BtnRecord" Content="开始录像" Click="ButtonRecord_OnClick" Margin="5,0,0,0"/>
+                <Button x:Name="BtnPreview" Content="预览" Click="BtnPreview_OnClick" />
+                <Button x:Name="BtnShotJpeg" Content="抓图" Click="ButtonShotJpeg_OnClick" Margin="5,0,0,0" />
+                <Button x:Name="BtnRecord" Content="开始录像" Click="ButtonRecord_OnClick" Margin="5,0,0,0" />
             </WrapPanel>
         </Grid>
     </Grid>
