--- a/App11.HIK/Views/XamlWindow.xaml
+++ b/App11.HIK/Views/XamlWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="App11.HIK.Views.HikWindow"
+﻿<Window x:Class="App11.HIK.Views.XamlWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -14,12 +14,14 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid Grid.Row="0">
-                <interop:AirspaceDecorator AirspaceMode="Redirect" IsInputRedirectionEnabled="True"
+                <interop:AirspaceDecorator AirspaceMode="None" 
+                                           IsInputRedirectionEnabled="True"
                                            IsOutputRedirectionEnabled="True">
                     <WindowsFormsHost HorizontalAlignment="Stretch">
                         <forms:PictureBox x:Name="VideoControl" BackColor="Black" AutoSize="True" />
                     </WindowsFormsHost>
                 </interop:AirspaceDecorator>
+                
                 <Grid x:Name="PanelBack" Background="#EFFF">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
