--- a/App11.HIK/Views/Pages/HikCameraPage.xaml
+++ b/App11.HIK/Views/Pages/HikCameraPage.xaml
@@ -1,27 +1,25 @@
-﻿<Window x:Class="App11.HIK.Views.XamlWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:forms="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
-        xmlns:interop="clr-namespace:Microsoft.DwayneNeed.Interop;assembly=Microsoft.DwayneNeed"
-        mc:Ignorable="d"
-        Title="HikWindow" Height="500" Width="800">
+﻿<Page x:Class="App11.HIK.Views.Pages.HikCameraPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:interop="clr-namespace:Microsoft.DwayneNeed.Interop;assembly=Microsoft.DwayneNeed"
+      xmlns:forms="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
+      mc:Ignorable="d"
+      Title="HikCameraPage" d:DesignHeight="900" d:DesignWidth="600">
     <Grid>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Grid Grid.Row="0">
-                <interop:AirspaceDecorator AirspaceMode="None" 
+        <StackPanel>
+            <Grid>
+                <interop:AirspaceDecorator x:Name="Control0" 
+                                           AirspaceMode="None"
+                                           SizeChanged="Control0_OnSizeChanged"
                                            IsInputRedirectionEnabled="True"
                                            IsOutputRedirectionEnabled="True">
-                    <WindowsFormsHost HorizontalAlignment="Stretch">
+                    <WindowsFormsHost>
                         <forms:PictureBox x:Name="VideoControl" BackColor="Black" AutoSize="True" />
                     </WindowsFormsHost>
                 </interop:AirspaceDecorator>
-                
+
                 <Grid x:Name="PanelBack" Background="#EFFF">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
@@ -33,15 +31,15 @@
                         <RowDefinition Height="*" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                    <Image Grid.Column="1" Grid.Row="1" Source="../Resources/ForbiddenSign.png" />
+                    <Image Grid.Column="1" Grid.Row="1" Source="../../Resources/ForbiddenSign.png" />
                 </Grid>
             </Grid>
 
-            <WrapPanel VerticalAlignment="Bottom" Grid.Row="1">
+            <WrapPanel>
                 <Button x:Name="BtnPreview" Content="预览" Click="BtnPreview_OnClick" />
                 <Button x:Name="BtnShotJpeg" Content="抓图" Click="ButtonShotJpeg_OnClick" Margin="5,0,0,0" />
                 <Button x:Name="BtnRecord" Content="开始录像" Click="ButtonRecord_OnClick" Margin="5,0,0,0" />
             </WrapPanel>
-        </Grid>
+        </StackPanel>
     </Grid>
-</Window>
+</Page>
