--- a/App11.HIK/Views/Pages/HikCameraPage.xaml
+++ b/App11.HIK/Views/Pages/HikCameraPage.xaml
@@ -1,14 +1,66 @@
-﻿<Page x:Class="App11.HIK.Views.Pages.HikCameraPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:interop="clr-namespace:Microsoft.DwayneNeed.Interop;assembly=Microsoft.DwayneNeed"
-      xmlns:forms="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
-      mc:Ignorable="d"
-      Title="HikCameraPage" d:DesignHeight="900" d:DesignWidth="600">
+﻿<UserControl x:Class="App11.HIK.Views.Pages.HikCameraPage"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:interop="clr-namespace:Microsoft.DwayneNeed.Interop;assembly=Microsoft.DwayneNeed"
+             xmlns:forms="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
+             xmlns:ui="http://schemas.modernwpf.com/2019"
+             xmlns:viewModels="clr-namespace:App11.HIK.ViewModels"
+             mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance Type=viewModels:HikCameraPageViewModel , IsDesignTimeCreatable=True}"
+             d:DesignHeight="900" d:DesignWidth="600">
+    <UserControl.Resources>
+        <Style TargetType="HeaderedContentControl">
+            <Setter Property="Margin" Value="0,0,0,0" />
+            <Setter Property="IsTabStop" Value="False" />
+            <Setter Property="HeaderTemplate">
+                <Setter.Value>
+                    <DataTemplate>
+                        <TextBlock
+                            Text="{Binding}"
+                            Style="{DynamicResource BaseTextBlockStyle}"
+                            Margin="0,0,0,6" />
+                    </DataTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style TargetType="ui:SimpleStackPanel">
+            <Setter Property="Spacing" Value="12" />
+        </Style>
+    </UserControl.Resources>
     <Grid>
         <StackPanel>
+            <Grid>
+                <HeaderedContentControl Header="设备信息" Margin="12">
+                    <Grid>
+                        <Grid.Resources>
+                            <Style TargetType="TextBlock">
+                                <Setter Property="Margin" Value="5" />
+                            </Style>
+                        </Grid.Resources>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="2*" />
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="2*" />
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="2*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="30" />
+                            <RowDefinition Height="30" />
+                        </Grid.RowDefinitions>
+                        <TextBlock Grid.Row="0" Grid.Column="0" Text="物理地址"/>
+                        <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding CurrentRobot.RemoteMac}"/>
+                        <TextBlock Grid.Row="0" Grid.Column="2" Text="IP地址"/>
+                        <TextBlock Grid.Row="0" Grid.Column="3" Text="{Binding CurrentRobot.DevIp}"/>
+                        <TextBlock Grid.Row="0" Grid.Column="4" Text="设备序列号"/>
+                        <TextBlock Grid.Row="0" Grid.Column="5" Text="{Binding CurrentRobot.SerialNum}"/>
+                    </Grid>
+                </HeaderedContentControl>
+            </Grid>
+            
             <Grid>
                 <interop:AirspaceDecorator x:Name="Control0" 
                                            AirspaceMode="None"
@@ -36,10 +88,10 @@
             </Grid>
 
             <WrapPanel>
-                <Button x:Name="BtnPreview" Content="预览" Click="BtnPreview_OnClick" />
+                <Button x:Name="BtnPreview" Content="预览" Click="BtnPreview_OnClick" Margin="5,0,0,0" />
                 <Button x:Name="BtnShotJpeg" Content="抓图" Click="ButtonShotJpeg_OnClick" Margin="5,0,0,0" />
                 <Button x:Name="BtnRecord" Content="开始录像" Click="ButtonRecord_OnClick" Margin="5,0,0,0" />
             </WrapPanel>
         </StackPanel>
     </Grid>
-</Page>
+</UserControl>
