--- a/App11.HIK/Views/SlashWindow.xaml
+++ b/App11.HIK/Views/SlashWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         mc:Ignorable="d"
+        WindowStartupLocation="CenterScreen"
         Title="海康威视SDK" Width="300" Height="200">
     <Grid>
         <WrapPanel HorizontalAlignment="Right" VerticalAlignment="Bottom" >
