--- a/App11.HIK/Views/SplashWindow.xaml
+++ b/App11.HIK/Views/SplashWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="App11.HIK.Views.SlashWindow"
+﻿<Window x:Class="App11.HIK.Views.SplashWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -8,6 +8,7 @@
         Title="海康威视SDK" Width="300" Height="200">
     <Grid>
         <WrapPanel HorizontalAlignment="Right" VerticalAlignment="Bottom" >
+            <Button Content="Toast" Click="ButtonToast_OnClick" Margin="5"/>
             <Button Content="布局装载" Click="ButtonXaml_OnClick" Margin="5"/>
             <Button Content="使用Page" Click="ButtonPage_OnClick" Margin="5"/>
             <Button Content="代码装载" Click="ButtonDyna_OnClick" Margin="5"/>
