--- a/App03.Network/App.xaml
+++ b/App03.Network/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="App03.Network.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views/SlashWindow.xaml">
+             StartupUri="Views/SplashWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
