--- a/App03.Network/Views/MainWindow.xaml
+++ b/App03.Network/Views/MainWindow.xaml
@@ -1,9 +1,23 @@
 ﻿<Window x:Class="App03.Network.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:control="clr-namespace:App03.Network.Control"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid />
+        Title="网卡切换" Width="300" Height="200">
+    <Grid>
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                <GradientStop Color="#fafafa" Offset="0.1" />
+                <GradientStop Color="#212121" Offset="1" />
+            </LinearGradientBrush>
+        </Grid.Background>
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+            <control:SimpleButton x:Name="ButtonTcp" Content="TCP 试一下" Mode="Text" Padding="20,10,20,10"
+                                  Click="ButtonTcp_OnClick" />
+            <control:SimpleButton x:Name="ButtonUdp" Content="UDP 试一下" Mode="Text" Padding="20,10,20,10"
+                                  Click="ButtonUdp_OnClick" />
+        </StackPanel>
+    </Grid>
 </Window>
